# cmpe-462

./: .gitignore  README.md  benchmark_results_task1.csv  feature_extraction.ipynb  filter.ipynb  image_processing.ipynb  library_benchmark.ipynb  logistic_regression.ipynb  preprocessing.ipynb  pyproject.toml  similarity_analysis.ipynb  sklearn-logistic.ipynb
data_workflow_notebooks/: 1_image_processing.ipynb  2_feature_extraction.ipynb  3_preprocessing.ipynb
data_workflow_notebooks/data/: vocabulary.json
data_workflow_notebooks/data/tabular/: test.csv  test_img_only_processed.csv  test_processed.csv
other_notbooks/: sklearn-logistic.ipynb
report/: comparison.txt  report.tex  similarity_analysis.txt  stats.txt
task_1/: benchmark_results.csv  library_benchmark.ipynb  outlier_detection_poc.ipynb  soft_margin_svm.ipynb  soft_svm.ipynb  svm_img_only_predictions_output0.1.csv  svm_img_only_predictions_output1.csv  svm_img_only_predictions_output10.csv  svm_predictions_output0.01.csv  svm_predictions_output0.1.csv  svm_predictions_output1.csv  svm_predictions_output10.csv  svm_predictions_output100.csv
task_2/: benchmark_results_pca.csv  clustering.ipynb  pca.ipynb  unsupervised.ipynb
