[project]
name = "cmpe-462"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13, <3.14"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "polars>=1.35.2",
    "ruff>=0.14.6",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[tool.ruff]
line-length = 150
lint.select = ["I", "F", "E", "W"]
